[package]
name = "bevy_ui_bits"
version = "0.7.0"
authors = ["Orlando Valverde <orlando.jesig.va@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A mingy and opinionated collection of UI components for Bevy "
homepage = "https://github.com/septum/bevy_ui_bits"
repository = "https://github.com/septum/bevy_ui_bits"
documentation = "https://docs.rs/bevy_ui_bits"
readme = "README.md"
keywords = ["bevy", "ui", "components"]
categories = ["game-development"]

[dependencies.bevy]
version = "0.15"
default-features = false
features = ["bevy_ui"]

[[example]]
name = "main_menu"
path = "examples/main_menu.rs"
required-features = ["bevy/default"]

[[example]]
name = "hud"
path = "examples/hud.rs"
required-features = ["bevy/default"]

[[example]]
name = "despawn"
path = "examples/despawn.rs"
required-features = ["bevy/default"]

[[example]]
name = "readme"
path = "examples/readme.rs"
required-features = ["bevy/default"]
